--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon_io/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chandigarh University | Student Result</title>
+    <title>Chandigarh University Information Management System</title>
   </head>
   <body>
     <div id="root"></div>
